--- a/online_collaboration/index.html
+++ b/online_collaboration/index.html
@@ -9,38 +9,172 @@
     <title>Collaboration</title>
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
     <link href="./assets/css/bootstrap-theme.min.css" rel="stylesheet" />
+
+    <!--Import Google Icon Font-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link href="./assets/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <script type="text/javascript" src="assets/libs/angular/angular.js"></script>
-    <script type="text/javascript" src="assets/libs/angular/angular-route.js"></script>
-    <script type="text/javascript" src="app/app.module.js"></script>
-    <script type="text/javascript" src="app/app.routes.js"></script>
-    <script type="text/javascript" src="app/components/page/pageController.js"></script>
+
+    <style>i.icon-blue {
+    color:  teal darken-4;
+}</style>
+
+<script type="text/javascript" src="assets/libs/angular/angular.js"></script>
+<script type="text/javascript" src="assets/libs/angular/angular-route.js"></script>
+<script type="text/javascript" src="app/app.module.js"></script>
+<script type="text/javascript" src="app/app.routes.js"></script>
+<script type="text/javascript" src="app/components/page/pageController.js"></script>
+<script type="text/javascript" src="assets/js/app.js"></script>
 
 </head>
 
 <body>
     <header>
-        <div class="row">
-            <nav class="navbar navbar-default">
-                <div class="container">
-                    <div class="navbar-header">
-                        <a class="navbar-brand" href="#/home">COLLABORATION</a>
-                    </div>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#!/home"><i class="fa fa-home"></i> Home</a></li>
-                        <li><a href="#!/about"><i class="fa fa-shield"></i> About</a></li>
-                        <li><a href="#!/contact"><i class="fa fa-comment"></i> Contact</a></li>
+        <nav>
+            <div class="nav-wrapper teal darken-4">
+                <a href="#!" class="brand-logo"> <i class="material-icons">business</i>Collaboration</a>
+                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+                <div class="row">
+                    <ul class="right hide-on-med-and-down">
+                        <li>
+                            <a href="sass.html"> <i class="material-icons">supervisor_account</i></a>
+                        </li>
+                        <li>
+                            <a href="sass.html"> <i class="material-icons">work</i></a>
+                        </li>
+                        <li><a href="badges.html"><i class="material-icons">speaker_notes</i></a></li>
+                        <li><a href="collapsible.html"><i class="material-icons">add_alert</i></a></li>
+                        <li><a href="mobile.html"><i class="material-icons">settings</i></a></li>
+                    </ul>
+                    <ul class="side-nav" id="mobile-demo">
+                        <li>
+                            <a href="sass.html"> <i class="material-icons">store</i>Home</a>
+                        </li>
+                        <li>
+                            <a href="sass.html"> <i class="material-icons">work</i>Jobs</a>
+                        </li>
+                        <li><a href="badges.html"><i class="material-icons">speaker_notes</i>Forums</a></li>
+                        <li><a href="collapsible.html"><i class="material-icons">add_alert</i>Notification</a></li>
+                        <li><a href="mobile.html"><i class="material-icons">settings</i>Settings</a></li>
                     </ul>
                 </div>
-            </nav>
+            </div>
+        </nav>
+        <div class="pull-right">
+            <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
         </div>
     </header>
+
+    <ul id="slide-out" class="side-nav cyan darken-4">
+        <li>
+            <div class="userView">
+                <div class="background">
+                    <img src="assets/img/navback4.jpg">
+                </div>
+                <a href="#!user"><img class="circle" src=""></a>
+                <a href="#!name"><span class="white-text name">Gauresh Gosavi</span><i class="mdi-navigation-arrow-drop-down right"></i></a>
+                <a href="#!email"><span class="white-text email">gauresh.gosavi@gmail.com</span></a>
+            </div>
+        </li>
+        <li><a href="#!"><i class="material-icons">perm_identity</i>Profile</a></li>
+        <li><a href="#!"><i class="material-icons">forum</i>Forum</a></li>
+        <li><a href="#!"><i class="material-icons">subject</i>Blog</a></li>
+        <li><a href="#!"><i class="material-icons">redeem</i>Events</a></li>
+        <li><a href="#!"><i class="material-icons">work</i>Jobs</a></li>
+        <li><a href="#!"><i class="material-icons">chat</i>Chat</a></li>
+    </ul>
+ <!-- sidebar  ends here -->
+
     <div id="main">
         <div ng-view></div>
     </div>
+
+    <footer class="page-footer teal darken-4">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s6">
+                    <a href="#!/about">
+                        <h5 class="white-text">About Us</h5>
+                    </a>
+                    <p class="grey-text text-lighten-4"><i class="material-icons">location_on</i> NIIT, Near Ghatkopar Stn., Ghatkopar(E), Mumbai.</p>
+                    <p class="grey-text text-lighten-4"><i class="material-icons">email</i> Gauresh@niit.com</p>
+                    <p class="grey-text text-lighten-4"><i class="material-icons">phone</i> +1 555 123456</p>
+                </div>
+                <div class="col l6 s6">
+                    <a href="#!/contact">
+                        <h5 class="white-text">Contact Us</h5>
+                    </a>
+                    <p class="grey-text text-lighten-4"><i class="material-icons">location_on</i> NIIT, Near Ghatkopar Stn., Ghatkopar(E), Mumbai.</p>
+                    <p class="grey-text text-lighten-4"><i class="material-icons">email</i> Gauresh@niit.com</p>
+                    <p class="grey-text text-lighten-4"><i class="material-icons">phone</i> +1 555 123456</p>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2014 Copyright Text
+                <a class="grey-text text-lighten-4 right" href="#!">Move to top</a>
+            </div>
+        </div>
+    </footer>
+
     <script type="text/javascript" src="assets/libs/jquery/jquery.js"></script>
+    <script type="text/javascript" src="assets/libs/materialize/materialize.min.js"></script>
     <script type="text/javascript" src="assets/libs/bootstrap/bootstrap.js"></script>
-    
+
+    <script>
+        function openNav() {
+            document.getElementById("mySidenav").style.width = "250px";
+            document.getElementById("main").style.marginLeft = "250px";
+        }
+
+        function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
+            document.getElementById("main").style.marginLeft = "0";
+        }
+
+        // Show sideNav
+        $('.button-collapse').sideNav('show');
+        // Hide sideNav
+        $('.button-collapse').sideNav('hide');
+        // Destroy sideNav
+        $('.button-collapse').sideNav('destroy');
+
+        $('.button-collapse').sideNav({
+            menuWidth: 300, // Default is 240
+            edge: 'right', // Choose the horizontal origin
+            closeOnClick: true, // Closes side-nav on <a> clicks, useful for Angular/Meteor
+            draggable: true // Choose whether you can drag to open on touch screens
+        }
+        );
+
+        $('.dropdown-button').dropdown({
+            inDuration: 300,
+            outDuration: 225,
+            constrain_width: false, // Does not change width of dropdown to that of the activator
+            hover: true, // Activate on hover
+            gutter: 0, // Spacing from edge
+            belowOrigin: false, // Displays dropdown below the button
+            alignment: 'left' // Displays dropdown with edge aligned to the left of button
+        }
+        );
+
+        $('.dropdown-button').dropdown('open');
+
+        $('.dropdown-button').dropdown('close');
+
+        $('.datepicker').pickadate({
+            selectMonths: true, // Creates a dropdown to control month
+            selectYears: 15 // Creates a dropdown of 15 years to control year
+        });
+    </script>
+
 </body>
 
 </html>
