--- a/online_collaboration/index.html
+++ b/online_collaboration/index.html
@@ -89,7 +89,7 @@
         <li><a href="#!"><i class="material-icons">work</i>Jobs</a></li>
         <li><a href="#!"><i class="material-icons">chat</i>Chat</a></li>
     </ul>
- <!-- sidebar  ends here -->
+    <!-- sidebar  ends here -->
 
     <div id="main">
         <div ng-view></div>
@@ -172,6 +172,10 @@
         $('.datepicker').pickadate({
             selectMonths: true, // Creates a dropdown to control month
             selectYears: 15 // Creates a dropdown of 15 years to control year
+        });
+
+        $('.checkbox').change(function () {
+            $(this).is(':checked') ? $(this).siblings('.checkbox').prop('disabled', true) : "";
         });
     </script>
 
