--- a/online_collaboration/index.html
+++ b/online_collaboration/index.html
@@ -9,6 +9,9 @@
     <title>Collaboration</title>
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
     <link href="./assets/css/bootstrap-theme.min.css" rel="stylesheet" />
+    <link href="./assets/css/app.css" rel="stylesheet" />
+
+    <link href="https://fonts.googleapis.com/css?family=Freckle+Face" rel="stylesheet">
 
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -29,45 +32,59 @@
 <script type="text/javascript" src="assets/libs/angular/angular-route.js"></script>
 <script type="text/javascript" src="app/app.module.js"></script>
 <script type="text/javascript" src="app/app.routes.js"></script>
+
+
+<script type="text/javascript" src="app/components/user/userFactory.js"></script>
 <script type="text/javascript" src="app/components/page/pageController.js"></script>
+<script type="text/javascript" src="app/components/user/userController.js"></script>
 <script type="text/javascript" src="assets/js/app.js"></script>
 
 </head>
 
-<body>
+<body ng-app="myApp">
     <header>
-        <nav>
-            <div class="nav-wrapper teal darken-4">
-                <a href="#!" class="brand-logo"> <i class="material-icons">business</i>Collaboration</a>
-                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-                <div class="row">
-                    <ul class="right hide-on-med-and-down">
-                        <li>
-                            <a href="sass.html"> <i class="material-icons">supervisor_account</i></a>
-                        </li>
-                        <li>
-                            <a href="sass.html"> <i class="material-icons">work</i></a>
-                        </li>
-                        <li><a href="badges.html"><i class="material-icons">speaker_notes</i></a></li>
-                        <li><a href="collapsible.html"><i class="material-icons">add_alert</i></a></li>
-                        <li><a href="mobile.html"><i class="material-icons">settings</i></a></li>
-                    </ul>
-                    <ul class="side-nav" id="mobile-demo">
-                        <li>
-                            <a href="sass.html"> <i class="material-icons">store</i>Home</a>
-                        </li>
-                        <li>
-                            <a href="sass.html"> <i class="material-icons">work</i>Jobs</a>
-                        </li>
-                        <li><a href="badges.html"><i class="material-icons">speaker_notes</i>Forums</a></li>
-                        <li><a href="collapsible.html"><i class="material-icons">add_alert</i>Notification</a></li>
-                        <li><a href="mobile.html"><i class="material-icons">settings</i>Settings</a></li>
-                    </ul>
+        <div class="navbar-fixed">
+            <nav>
+                <div class="nav-wrapper teal darken-4">
+                    <a href="#!" class="brand-logo coll"> <i class="material-icons">business</i>Communex</a>
+                    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+                    <div class="row">
+                        <ul class="right hide-on-med-and-down">
+                            <li>
+                                <a href="sass.html"> <i class="material-icons">supervisor_account</i></a>
+                            </li>
+                            <li>
+                                <a href="sass.html"> <i class="material-icons">work</i></a>
+                            </li>
+                            <li><a href="badges.html"><i class="material-icons">speaker_notes</i></a></li>
+                            <li><a href="collapsible.html"><i class="material-icons">add_alert</i></a></li>
+                            <li><a href="mobile.html"><i class="material-icons">settings</i></a></li>
+                        </ul>
+                        <ul class="right"><a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">low_priority</i></a></ul>
+                        <ul class="side-nav cyan darken-4" id="mobile-demo">
+                            <li>
+                                <div class="userView">
+                                    <div class="background">
+                                        <img src="assets/img/navback4.jpg">
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="sass.html"> <i class="material-icons">store</i>Home</a>
+                            </li>
+                            <li>
+                                <a href="sass.html"> <i class="material-icons">work</i>Jobs</a>
+                            </li>
+                            <li><a href="badges.html"><i class="material-icons">speaker_notes</i>Forums</a></li>
+                            <li><a href="collapsible.html"><i class="material-icons">add_alert</i>Notification</a></li>
+                            <li><a href="mobile.html"><i class="material-icons">settings</i>Settings</a></li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
+        </div>
         <div class="pull-right">
-            <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
+            <a href="#" data-activates="slide-out" class="button-collapse hide-on-med-and-down menu"><i class="material-icons">menu</i></a>
         </div>
     </header>
 
@@ -176,6 +193,10 @@
 
         $('.checkbox').change(function () {
             $(this).is(':checked') ? $(this).siblings('.checkbox').prop('disabled', true) : "";
+        });
+
+        $(document).ready(function () {
+            $('.collapsible').collapsible();
         });
     </script>
 
