auth module done.

--- a/online_collaboration/index.html
+++ b/online_collaboration/index.html
@@ -33,6 +33,10 @@
 <script type="text/javascript" src="app/app.module.js"></script>
 <script type="text/javascript" src="app/app.routes.js"></script>
 
+<!-- Loading the authentication module -->
+<script src="app/components/authentication/AuthenticationFactory.js"></script>
+<script src="app/components/authentication/authenticationController.js"></script>
+
 
 <script type="text/javascript" src="app/components/user/userFactory.js"></script>
 <script type="text/javascript" src="app/components/page/pageController.js"></script>
