--- a/online_collaboration/index.html
+++ b/online_collaboration/index.html
@@ -30,6 +30,7 @@
 
 <script type="text/javascript" src="assets/libs/angular/angular.js"></script>
 <script type="text/javascript" src="assets/libs/angular/angular-route.js"></script>
+<script type="text/javascript" src="assets/libs/angular/angular-cookies.js"></script>
 <script type="text/javascript" src="app/app.module.js"></script>
 <script type="text/javascript" src="app/app.routes.js"></script>
 
@@ -52,6 +53,10 @@
 <!-- Loading the forum module -->
 <script src="app/components/forum/ForumFactory.js"></script>
 <script src="app/components/forum/ForumController.js"></script>
+
+<!-- Loading the Blog Comment module -->
+<script src="app/components/forum/ForumCommentFactory.js"></script>
+<script src="app/components/forum/ForumCommentController.js"></script>
 
 
 <script type="text/javascript" src="app/components/user/userFactory.js"></script>
