--- a/online_collaboration/index.html
+++ b/online_collaboration/index.html
@@ -15,18 +15,22 @@
 
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <!--Import materialize.css-->
     <link href="./assets/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
     <style>i.icon-blue {
     color:  teal darken-4;
 }</style>
+
+
+<script type="text/javascript" src="assets/libs/jquery/jquery.js"></script>
+<script type="text/javascript" src="assets/libs/materialize/materialize.min.js"></script>
+<script type="text/javascript" src="assets/libs/bootstrap/bootstrap.js"></script>
 
 <script type="text/javascript" src="assets/libs/angular/angular.js"></script>
 <script type="text/javascript" src="assets/libs/angular/angular-route.js"></script>
@@ -72,33 +76,24 @@
             <nav>
                 <div class="nav-wrapper teal darken-4">
                     <a href="#!" class="brand-logo coll"> <i class="material-icons">business</i>Communex</a>
-                    <a href="#" data-activates="mobile-demo" class="button-collapse" ng-show="islogin"><i class="material-icons">menu</i></a>
+                    <a data-href="#" href="javascript:void(0)" data-activates="mobile-demo" class="button-collapse" id="menuNav" ng-if="authenticated"><i class="material-icons">menu</i></a>
                     <div class="row">
                         <ul class="right hide-on-med-and-down">
                             <li>
-                                <a href="#!/admin/pendingUsers" ng-show="islogin"> <i class="material-icons">supervisor_account</i></a>
+                                <a href="#!/admin/pendingUsers" ng-if="authenticated"> <i class="material-icons">supervisor_account</i></a>
                             </li>
                             <li>
-                                <a href="sass.html" ng-show="islogin"> <i class="material-icons">work</i></a>
+                                <a href="sass.html" ng-if="authenticated"> <i class="material-icons">work</i></a>
                             </li>
-                            <li><a href="badges.html" ng-show="islogin"><i class="material-icons">speaker_notes</i></a></li>
-                            <li><a href="collapsible.html" ng-show="islogin"><i class="material-icons">add_alert</i></a></li>
-                            <li><a href="mobile.html" ng-show="islogin"><i class="material-icons">settings</i></a></li>
+                            <li><a href="badges.html" ng-if="authenticated"><i class="material-icons">speaker_notes</i></a></li>
+                            <li><a href="collapsible.html" ng-if="authenticated"><i class="material-icons">add_alert</i></a></li>
+                            <li><a href="mobile.html" ng-if="authenticated"><i class="material-icons">settings</i></a></li>
                         </ul>
-                        <ul class="right"><a href="#" data-activates="slide-out" class="button-collapse" ng-show="islogin"><i class="material-icons">low_priority</i></a></ul>
+                        <ul class="right"><a data-href="#" href="javascript:void(0)" data-activates="slide-out" class="button-collapse" id="userNav"
+                                ng-if="authenticated"><i class="material-icons">low_priority</i></a></ul>
                         <ul class="side-nav cyan darken-4" id="mobile-demo">
                             <li>
-                                <div class="userView">
-                                    <div class="background">
-                                        <img src="assets/img/navback4.jpg">
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
                                 <a href="sass.html"> <i class="material-icons">store</i>Home</a>
-                            </li>
-                            <li>
-                                <a href="sass.html"> <i class="material-icons">work</i>Jobs</a>
                             </li>
                             <li><a href="badges.html"><i class="material-icons">speaker_notes</i>Forums</a></li>
                             <li><a href="collapsible.html"><i class="material-icons">add_alert</i>Notification</a></li>
@@ -108,10 +103,18 @@
                 </div>
             </nav>
         </div>
-        <div class="pull-right">
-            <a href="#" data-activates="slide-out" class="button-collapse hide-on-med-and-down menu" ng-show="islogin"><i class="material-icons">menu</i></a>
-        </div>
+    
+    <!-- navbar ends here-->
+
+
+    <!-- will be visible when the user authenticates -->
+    <div class="pull-right">
+        <a data-href="#" href="javascript:void(0)" data-activates="slide-out" class="button-collapse hide-on-med-and-down menu" id="userNav"
+            ng-if="authenticated"><i class="material-icons">menu</i></a>
+    </div>
+
     </header>
+
 
     <ul id="slide-out" class="side-nav cyan darken-4">
         <li>
@@ -140,12 +143,12 @@
                     <div class="collapsible-header cyan darken-4"><i class="material-icons">subject</i>Blog</div>
                     <div class="collapsible-body cyan darken-4">
                         <ul>
-                            <li><a href="#!/admin/pendingBlogs" ng-show="isAdmin"><i class="material-icons">send</i>Pending Blogs</a></li>
-                            <li><a href="#!" ng-show="isAdmin"><i class="material-icons">send</i>Approved Blogs</a></li>
-                            <li><a href="#!" ng-show="isAdmin"><i class="material-icons">send</i>Rejected Blogs</a></li>
-                            <li><a href="#!/user/viewBlog" ng-show="isUser"><i class="material-icons">send</i>View Blogs</a></li>
-                            <li><a href="#!" ng-show="isUser"><i class="material-icons">send</i>My Blogs</a></li>
-                            <li><a href="#!/user/createBlog" ng-show="isUser"><i class="material-icons">send</i>Create Blog</a></li>
+                            <li><a href="#!/admin/pendingBlogs" ng-if="user.role == 'ADMIN'"><i class="material-icons">send</i>Pending Blogs</a></li>
+                            <li><a href="#!" ng-if="user.role == 'ADMIN'"><i class="material-icons">send</i>Approved Blogs</a></li>
+                            <li><a href="#!" ng-if="user.role == 'ADMIN'"><i class="material-icons">send</i>Rejected Blogs</a></li>
+                            <li><a href="#!/user/viewBlog" ng-if="user.role == 'USER'"><i class="material-icons">send</i>View Blogs</a></li>
+                            <li><a href="#!" ng-if="user.role == 'USER'"><i class="material-icons">send</i>My Blogs</a></li>
+                            <li><a href="#!/user/createBlog" ng-if="user.role == 'USER'"><i class="material-icons">send</i>Create Blog</a></li>
                         </ul>
                     </div>
                     <li>
@@ -153,16 +156,15 @@
                         <div class="collapsible-body cyan darken-4">
                             <ul>
                                 <li><a href="#!/viewForums"><i class="material-icons">send</i>View Forums</a></li>
-                                <li><a href="#!/admin/createForum" ng-show="isAdmin"><i class="material-icons">send</i>Create Forum</a></li>
-                                <li><a href="#!" ng-show="isUser"><i class="material-icons">send</i>My Forums</a></li>
-                                <li><a href="#!"><i class="material-icons">send</i>View Forum Messages</a></li>
+                                <li><a href="#!/admin/createForum" ng-if="user.role == 'ADMIN'"><i class="material-icons">send</i>Create Forum</a></li>
+                                <li><a href="#!"><i class="material-icons">send</i>My Forums</a></li>
                             </ul>
                         </div>
                         <li>
                             <a href="#!"><i class="material-icons">redeem</i>Events</a></li>
                         <li><a href="#!"><i class="material-icons">work</i>Jobs</a></li>
                         <li><a href="#!"><i class="material-icons">chat</i>Chat</a></li>
-                        <li><a href="#!" ng-show="islogin" ng-click="logout()"><i class="material-icons">power_settings_new</i>Logout</a></li>
+                        <li><a href="#!" ng-if="authenticated" ng-click="logout()"><i class="material-icons">power_settings_new</i>Logout</a></li>
             </ul>
             </li>
     </ul>
@@ -201,64 +203,7 @@
         </div>
     </footer>
 
-    <script type="text/javascript" src="assets/libs/jquery/jquery.js"></script>
-    <script type="text/javascript" src="assets/libs/materialize/materialize.min.js"></script>
-    <script type="text/javascript" src="assets/libs/bootstrap/bootstrap.js"></script>
 
-    <script>
-        function openNav() {
-            document.getElementById("mySidenav").style.width = "250px";
-            document.getElementById("main").style.marginLeft = "250px";
-        }
-
-        function closeNav() {
-            document.getElementById("mySidenav").style.width = "0";
-            document.getElementById("main").style.marginLeft = "0";
-        }
-
-        // Show sideNav
-        $('.button-collapse').sideNav('show');
-        // Hide sideNav
-        $('.button-collapse').sideNav('hide');
-        // Destroy sideNav
-        $('.button-collapse').sideNav('destroy');
-
-        $('.button-collapse').sideNav({
-            menuWidth: 300, // Default is 240
-            edge: 'right', // Choose the horizontal origin
-            closeOnClick: true, // Closes side-nav on <a> clicks, useful for Angular/Meteor
-            draggable: true // Choose whether you can drag to open on touch screens
-        }
-        );
-
-        $('.dropdown-button').dropdown({
-            inDuration: 300,
-            outDuration: 225,
-            constrain_width: false, // Does not change width of dropdown to that of the activator
-            hover: true, // Activate on hover
-            gutter: 0, // Spacing from edge
-            belowOrigin: false, // Displays dropdown below the button
-            alignment: 'left' // Displays dropdown with edge aligned to the left of button
-        }
-        );
-
-        $('.dropdown-button').dropdown('open');
-
-        $('.dropdown-button').dropdown('close');
-
-        $('.datepicker').pickadate({
-            selectMonths: true, // Creates a dropdown to control month
-            selectYears: 15 // Creates a dropdown of 15 years to control year
-        });
-
-        $('.checkbox').change(function () {
-            $(this).is(':checked') ? $(this).siblings('.checkbox').prop('disabled', true) : "";
-        });
-
-        $(document).ready(function () {
-            $('.collapsible').collapsible();
-        });
-    </script>
 
 </body>
 
