user profile done bt image upload having issues.

--- a/online_collaboration/index.html
+++ b/online_collaboration/index.html
@@ -116,6 +116,10 @@ Max-Width: Refers to everything less than or equal to the amount given.
 <script src="app/components/forum/ForumCommentFactory.js"></script>
 <script src="app/components/forum/ForumCommentController.js"></script>
 
+<!-- Loading the profile upload module -->
+<script src="app/components/upload/UploadFactory.js"></script>
+<script src="app/components/upload/UploadController.js"></script>
+
 
 <script type="text/javascript" src="app/components/user/userFactory.js"></script>
 <script type="text/javascript" src="app/components/page/pageController.js"></script>
