done with friend module now working on chat

--- a/online_collaboration/index.html
+++ b/online_collaboration/index.html
@@ -209,6 +209,8 @@ Max-Width: Refers to everything less than or equal to the amount given.
                     <div class="collapsible-body yellow darken-1">
                         <ul>
                             <li><a href="#!/approvedUsers"><i class="material-icons">send</i>View Users</a></li>
+                            <li><a href="#!/myFriends"><i class="material-icons">send</i>My Friends</a></li>
+                            <li><a href="#!/friendRequests"><i class="material-icons">send</i>Friends Requests</a></li>
                             <li><a href="#!/admin/pendingUsers" ng-if="user.role == 'ADMIN'"><i class="material-icons">send</i>Approve Users</a></li>
                             <li><a href="#!/admin/blockUsers" ng-if="user.role == 'ADMIN'"><i class="material-icons">send</i>Block Users</a></li>
                         </ul>
